apps/animeta/deployment-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: animeta-backend
  labels:
    app: animeta-backend
    keel.sh/policy: force
spec:
  replicas: 1
  selector:
    matchLabels:
      app: animeta-backend
  template:
    metadata:
      labels:
        app: animeta-backend
    spec:
      containers:
      - name: backend
        image: gcr.io/ditto-1470749749381/animeta-backend
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        resources:
          limits:
            memory: "512Mi"
          requests:
            memory: "256Mi"
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
          initialDelaySeconds: 40
        volumeMounts:
        - mountPath: /app/secret
          name: secret
      volumes:
      - name: secret
        secret:
          secretName: animeta
