apps/animeta/deployment-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: animeta-frontend
  labels:
    app: animeta-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: animeta-frontend
  template:
    metadata:
      labels:
        app: animeta-frontend
    spec:
      containers:
      - name: frontend
        image: ghcr.io/dittos/animeta-frontend
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
        resources:
          limits:
            memory: "128Mi"
        readinessProbe:
          httpGet:
            path: /healthz
            port: 3000
          initialDelaySeconds: 10
        livenessProbe:
          httpGet:
            path: /healthz
            port: 3000
          initialDelaySeconds: 10
        volumeMounts:
        - mountPath: /app/conf
          name: config
      volumes:
      - name: config
        configMap:
          name: animeta-frontend
