apps/animeta/service-backend-ts.yaml
kind: Service
apiVersion: v1
metadata:
  name: animeta-backend-ts
spec:
  selector:
    app: animeta-backend-ts
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 8081
    targetPort: 8081
    name: http
  - protocol: TCP
    port: 8082
    targetPort: 8082
    name: http2
