apps/animeta/service-backend.yaml
kind: Service
apiVersion: v1
metadata:
  name: animeta-backend
spec:
  selector:
    app: animeta-backend
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
