apps/animeta/service-lambda.yaml
kind: Service
apiVersion: v1
metadata:
  name: animeta-lambda
spec:
  type: ExternalName
  externalName: 8981kd8wv4.execute-api.ap-northeast-2.amazonaws.com
